--- a/src/GenericConverter/project.json
+++ b/src/GenericConverter/project.json
@@ -5,15 +5,10 @@
   },
 
   "dependencies": {
-    "Microsoft.NETCore.App": {
-      "type": "platform",
-      "version": "1.0.0-rc2-3002702"
-    }
+    "Microsoft.CrmSdk.CoreAssemblies": "8.1.0"
   },
 
   "frameworks": {
-    "netcoreapp1.0": {
-      "imports": "dnxcore50"
-    }
+    "net461": { }
   }
 }
