--- a/src/GenericConverter.TestConsole/GenericConverter.TestConsole.csproj
+++ b/src/GenericConverter.TestConsole/GenericConverter.TestConsole.csproj
@@ -2,7 +2,7 @@
 
   <PropertyGroup>
     <OutputType>Exe</OutputType>
-    <TargetFramework>net48</TargetFramework>
+    <TargetFrameworks>net462;net47;net471;net472;net48;netcoreapp3.1;net5</TargetFrameworks>
   </PropertyGroup>
 
   <ItemGroup>
