--- a/src/GenericConverter.Tests/GenericConverter.Tests.csproj
+++ b/src/GenericConverter.Tests/GenericConverter.Tests.csproj
@@ -1,7 +1,7 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFramework>net48</TargetFramework>
+    <TargetFrameworks>net462;net47;net471;net472;net48;netcoreapp3.1;net5</TargetFrameworks>
     <IsPackable>false</IsPackable>
     <TieredCompilation>true</TieredCompilation>
     <IsTestProject>true</IsTestProject>
@@ -11,32 +11,31 @@
 
   <ItemGroup>
     <PackageReference Include="EvilBaschdi.Testing" Version="2020.1.4.1259-develop" />
-    <PackageReference Include="Microsoft.NET.Test.Sdk" Version="16.6.0-preview-20200318-01" />
-    <PackageReference Include="Microsoft.CodeCoverage" Version="16.6.0-preview-20200318-01" />
-    <PackageReference Include="Microsoft.TestPlatform.ObjectModel" Version="16.6.0-preview-20200318-01" />
-    <PackageReference Include="Microsoft.TestPlatform.TestHost" Version="16.6.0-preview-20200318-01" />
+    <PackageReference Include="Microsoft.NET.Test.Sdk" Version="16.8.0-preview-20200921-01" />
+    <PackageReference Include="Microsoft.CodeCoverage" Version="16.8.0-preview-20200921-01" />
+    <PackageReference Include="Microsoft.TestPlatform.ObjectModel" Version="16.8.0-preview-20200921-01" />
+    <PackageReference Include="Microsoft.TestPlatform.TestHost" Version="16.8.0-preview-20200921-01" />
     <PackageReference Include="Albedo" Version="2.0.0" />
-    <PackageReference Include="AutoFixture" Version="4.11.0" />
-    <PackageReference Include="AutoFixture.AutoNSubstitute" Version="4.11.0" />
-    <PackageReference Include="AutoFixture.Idioms" Version="4.11.0" />
-    <PackageReference Include="AutoFixture.Xunit2" Version="4.11.0" />
-    <PackageReference Include="Castle.Core" Version="4.4.0" />
+    <PackageReference Include="AutoFixture" Version="4.14.0" />
+    <PackageReference Include="AutoFixture.AutoNSubstitute" Version="4.14.0" />
+    <PackageReference Include="AutoFixture.Idioms" Version="4.14.0" />
+    <PackageReference Include="AutoFixture.Xunit2" Version="4.14.0" />
+    <PackageReference Include="Castle.Core" Version="4.4.1" />
     <PackageReference Include="Fare" Version="2.1.2" />
-    <PackageReference Include="FluentAssertions" Version="5.10.3" />
-    <PackageReference Include="NCrunch.Framework" Version="4.0.0.1" />
-    <PackageReference Include="NSubstitute" Version="4.2.1" />
-    <PackageReference Include="NSubstitute.Analyzers.CSharp" Version="1.0.12" />
+    <PackageReference Include="FluentAssertions" Version="6.0.0-alpha0001" />
+    <PackageReference Include="NCrunch.Framework" Version="4.5.0" />
+    <PackageReference Include="NSubstitute" Version="4.2.2" />
+    <PackageReference Include="NSubstitute.Analyzers.CSharp" Version="1.0.13" />
     <PackageReference Include="System.ValueTuple" version="4.5.0" />
     <PackageReference Include="xunit" Version="2.4.2-pre.build.4151" />
     <PackageReference Include="xunit.analyzers" Version="0.11.0-pre.24" />
-    <PackageReference Include="System.Runtime.CompilerServices.Unsafe" Version="5.0.0-preview.1.20120.5" />
-    <PackageReference Include="Microsoft.CrmSdk.CoreAssemblies" Version="9.0.2.24" />
+    <PackageReference Include="System.Runtime.CompilerServices.Unsafe" Version="5.0.0-rc.1.20451.14" />
     <PackageReference Include="xunit.runner.console" Version="2.4.2-pre.build.4151">
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
     <PackageReference Include="xunit.runner.utility" Version="2.4.2-pre.build.4151" />
-    <PackageReference Include="xunit.runner.visualstudio" Version="2.4.2-preview.76">
+    <PackageReference Include="xunit.runner.visualstudio" Version="2.4.3">
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers</IncludeAssets>
     </PackageReference>
