--- a/src/GenericConverter/GenericConverter.csproj
+++ b/src/GenericConverter/GenericConverter.csproj
@@ -1,21 +1,29 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
   <PropertyGroup>
-    <TargetFrameworks>net452;net46;net461;net462;net47;net471;net472;net48</TargetFrameworks>
+    <TargetFrameworks>net452;net46;net461;net462;net47;net471;net472;net48;netcoreapp3.1;net5.0</TargetFrameworks>
     <AssemblyName>GenericConverter</AssemblyName>
     <OutputType>Library</OutputType>
     <PackageId>GenericConverter</PackageId>
-    <GenerateAssemblyConfigurationAttribute>false</GenerateAssemblyConfigurationAttribute>
-    <GenerateAssemblyCompanyAttribute>false</GenerateAssemblyCompanyAttribute>
-    <GenerateAssemblyProductAttribute>false</GenerateAssemblyProductAttribute>
     <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
     <ApplicationIcon />
     <StartupObject />
-    <LangVersion>8.0</LangVersion>
+    <LangVersion>9</LangVersion>
   </PropertyGroup>
-  <ItemGroup Condition=" '$(TargetFramework)' == 'net452' OR '$(TargetFramework)' == 'net46' OR '$(TargetFramework)' == 'net461' ">
-    <PackageReference Include="Microsoft.CrmSdk.CoreAssemblies" Version="9.0.2.5" />
-  </ItemGroup>
-  <ItemGroup Condition=" '$(TargetFramework)' != 'net452' AND '$(TargetFramework)' != 'net46' AND '$(TargetFramework)' != 'net461' ">
-    <PackageReference Include="Microsoft.CrmSdk.CoreAssemblies" Version="9.0.2.24" />
-  </ItemGroup>
+
+  <Choose>
+    <!--ReSharper disable UnknownProperty-->
+    <When
+      Condition=" '$(TargetFramework)' == 'net452' OR '$(TargetFramework)' == 'net46' OR '$(TargetFramework)' == 'net461' ">
+      <!--ReSharper restore UnknownProperty-->
+      <ItemGroup>
+        <PackageReference Include="Microsoft.CrmSdk.CoreAssemblies" Version="9.0.2.5" />
+      </ItemGroup>
+    </When>
+    <Otherwise>
+      <ItemGroup>
+        <PackageReference Include="Microsoft.Powerplatform.Cds.Client" Version="0.3.10-Alpha" />
+      </ItemGroup>
+    </Otherwise>
+  </Choose>
+
 </Project>
