--- a/src/GenericConverter/GenericConverter.csproj
+++ b/src/GenericConverter/GenericConverter.csproj
@@ -1,29 +1,19 @@
-﻿<Project Sdk="Microsoft.NET.Sdk">
-  <PropertyGroup>
-    <TargetFrameworks>net452;net46;net461;net462;net47;net471;net472;net48;netcoreapp3.1;net5.0</TargetFrameworks>
-    <AssemblyName>GenericConverter</AssemblyName>
-    <OutputType>Library</OutputType>
-    <PackageId>GenericConverter</PackageId>
-    <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
-    <ApplicationIcon />
-    <StartupObject />
-    <LangVersion>9</LangVersion>
-  </PropertyGroup>
+<Project Sdk="Microsoft.NET.Sdk">
+	<PropertyGroup>
+		<TargetFrameworks>net462;net47;net471;net472;net48;netcoreapp3.1;net5.0;net6.0</TargetFrameworks>
+		<AssemblyName>GenericConverter</AssemblyName>
+		<OutputType>Library</OutputType>
+		<PackageId>GenericConverter</PackageId>
+		<GeneratePackageOnBuild>true</GeneratePackageOnBuild>
+		<ApplicationIcon />
+		<StartupObject />
+		<LangVersion>preview</LangVersion>
+	</PropertyGroup>
 
-  <Choose>
-    <!--ReSharper disable UnknownProperty-->
-    <When
-      Condition=" '$(TargetFramework)' == 'net452' OR '$(TargetFramework)' == 'net46' OR '$(TargetFramework)' == 'net461' ">
-      <!--ReSharper restore UnknownProperty-->
-      <ItemGroup>
-        <PackageReference Include="Microsoft.CrmSdk.CoreAssemblies" Version="9.0.2.5" />
-      </ItemGroup>
-    </When>
-    <Otherwise>
-      <ItemGroup>
-        <PackageReference Include="Microsoft.PowerPlatform.Dataverse.Client" Version="0.4.20" />
-      </ItemGroup>
-    </Otherwise>
-  </Choose>
+	<ItemGroup>
+		<PackageReference Include="System.Text.Json" Version="6.0.0-rc.1.21451.13" />
+		<PackageReference Include="Microsoft.PowerPlatform.Dataverse.Client" Version="0.5.5" />
+	</ItemGroup>
+ 
 
 </Project>
