--- a/src/GenericConverter.TestConsole/GenericConverter.TestConsole.csproj
+++ b/src/GenericConverter.TestConsole/GenericConverter.TestConsole.csproj
@@ -2,7 +2,9 @@
 
   <PropertyGroup>
     <OutputType>Exe</OutputType>
-    <TargetFrameworks>net462;net47;net471;net472;net48;netcoreapp3.1;net5.0;net6.0</TargetFrameworks>
+    <TargetFramework>net7.0</TargetFramework>
+	  <EnableNETAnalyzers>true</EnableNETAnalyzers>
+	  <ImplicitUsings>enable</ImplicitUsings>
   </PropertyGroup>
 
   <ItemGroup>
