--- a/src/GenericConverter/GenericConverter.csproj
+++ b/src/GenericConverter/GenericConverter.csproj
@@ -1,6 +1,6 @@
 <Project Sdk="Microsoft.NET.Sdk">
 	<PropertyGroup>
-		<TargetFrameworks>net462;net47;net471;net472;net48;netcoreapp3.1;net5.0;net6.0</TargetFrameworks>
+		<TargetFramework>net7.0</TargetFramework>
 		<AssemblyName>GenericConverter</AssemblyName>
 		<OutputType>Library</OutputType>
 		<PackageId>GenericConverter</PackageId>
@@ -8,11 +8,24 @@
 		<ApplicationIcon />
 		<StartupObject />
 		<LangVersion>preview</LangVersion>
+		<EnableNETAnalyzers>true</EnableNETAnalyzers>
+		<ImplicitUsings>enable</ImplicitUsings>
 	</PropertyGroup>
 
 	<ItemGroup>
-		<PackageReference Include="System.Text.Json" Version="6.0.0-rc.1.21451.13" />
-		<PackageReference Include="Microsoft.PowerPlatform.Dataverse.Client" Version="0.5.5" />
+		<PackageReference Include="Microsoft.NETCore.Platforms" Version="7.0.0" />
+		<PackageReference Include="System.Security.Cryptography.Xml" Version="7.0.0" />
+		<PackageReference Include="System.Text.Json" Version="7.0.1" />
+		<PackageReference Include="Microsoft.SourceLink.AzureRepos.Git" Version="1.1.1">
+		  <PrivateAssets>all</PrivateAssets>
+		  <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+		</PackageReference>
+		<PackageReference Include="Microsoft.SourceLink.GitHub" Version="1.1.1">
+		  <PrivateAssets>all</PrivateAssets>
+		  <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+		</PackageReference>
+		<PackageReference Include="Microsoft.PowerPlatform.Dataverse.Client" Version="1.0.26" />
+		<PackageReference Include="System.Text.RegularExpressions" Version="4.3.1" />
 	</ItemGroup>
  
 
