--- a/src/GenericConverter/GenericConverter.csproj
+++ b/src/GenericConverter/GenericConverter.csproj
@@ -13,9 +13,9 @@
 	</PropertyGroup>
 
 	<ItemGroup>
-		<PackageReference Include="Microsoft.NETCore.Platforms" Version="7.0.0" />
-		<PackageReference Include="System.Security.Cryptography.Xml" Version="7.0.1" />
-		<PackageReference Include="System.Text.Json" Version="7.0.1" />
+		<PackageReference Include="Microsoft.NETCore.Platforms" Version="8.0.0-preview.1.23110.8" />
+		<PackageReference Include="System.Security.Cryptography.Xml" Version="8.0.0-preview.1.23110.8" />
+		<PackageReference Include="System.Text.Json" Version="8.0.0-preview.1.23110.8" />
 		<PackageReference Include="Microsoft.SourceLink.AzureRepos.Git" Version="1.1.1">
 		  <PrivateAssets>all</PrivateAssets>
 		  <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
