--- a/src/GenericConverter/GenericConverter.csproj
+++ b/src/GenericConverter/GenericConverter.csproj
@@ -1,32 +1,18 @@
 <Project Sdk="Microsoft.NET.Sdk">
+
 	<PropertyGroup>
-		<TargetFramework>net7.0</TargetFramework>
+		<TargetFramework>net8.0</TargetFramework>
 		<AssemblyName>GenericConverter</AssemblyName>
 		<OutputType>Library</OutputType>
 		<PackageId>GenericConverter</PackageId>
-		<GeneratePackageOnBuild>true</GeneratePackageOnBuild>
-		<ApplicationIcon />
-		<StartupObject />
 		<LangVersion>preview</LangVersion>
 		<EnableNETAnalyzers>true</EnableNETAnalyzers>
 		<ImplicitUsings>enable</ImplicitUsings>
 	</PropertyGroup>
 
 	<ItemGroup>
-		<PackageReference Include="Microsoft.NETCore.Platforms" Version="8.0.0-preview.1.23110.8" />
-		<PackageReference Include="System.Security.Cryptography.Xml" Version="8.0.0-preview.1.23110.8" />
-		<PackageReference Include="System.Text.Json" Version="8.0.0-preview.1.23110.8" />
-		<PackageReference Include="Microsoft.SourceLink.AzureRepos.Git" Version="1.1.1">
-		  <PrivateAssets>all</PrivateAssets>
-		  <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
-		</PackageReference>
-		<PackageReference Include="Microsoft.SourceLink.GitHub" Version="1.1.1">
-		  <PrivateAssets>all</PrivateAssets>
-		  <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
-		</PackageReference>
-		<PackageReference Include="Microsoft.PowerPlatform.Dataverse.Client" Version="1.0.26" />
-		<PackageReference Include="System.Text.RegularExpressions" Version="4.3.1" />
+		<!-- ReSharper disable once VulnerablePackage -->
+		<PackageReference Include="Microsoft.PowerPlatform.Dataverse.Client" />
 	</ItemGroup>
- 
 
 </Project>
