--- a/src/GenericConverter/GenericConverter.csproj
+++ b/src/GenericConverter/GenericConverter.csproj
@@ -1,7 +1,7 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
 	<PropertyGroup>
-		<TargetFramework>net8.0</TargetFramework>
+		<TargetFramework>net9.0</TargetFramework>
 		<AssemblyName>GenericConverter</AssemblyName>
 		<OutputType>Library</OutputType>
 		<PackageId>GenericConverter</PackageId>
@@ -11,8 +11,15 @@
 	</PropertyGroup>
 
 	<ItemGroup>
-		<!-- ReSharper disable once VulnerablePackage -->
 		<PackageReference Include="Microsoft.PowerPlatform.Dataverse.Client" />
+	</ItemGroup>
+
+	<ItemGroup>
+		<PackageReference Include="System.Net.Http" />
+		<PackageReference Include="System.Text.RegularExpressions" />
+		<PackageReference Include="System.Formats.Asn1" />
+		<PackageReference Include="System.Security.Cryptography.Pkcs" />
+		<PackageReference Include="System.Text.Json" />
 	</ItemGroup>
 
 </Project>
